Fix scroll bar (when I had the wrapping div, it was causing a vertical scroll bar to appear).

--- a/teachertool/src/components/styling/MakecodeFramePlaceholder.module.scss
+++ b/teachertool/src/components/styling/MakecodeFramePlaceholder.module.scss
@@ -13,8 +13,8 @@
     color: var(--pxt-page-foreground);
     opacity: 0.65;
     font-size: 2rem;
-
     text-align: center;
+    user-select: none;
 
     i {
         font-size: 2rem;
